# workflows

./: .cirrus.yml  setup.py
xw_auth_base/: __manifest__.py
xw_auth_base/controllers/: controllers.py
xw_auth_base/models/: __init__.py  reg_wizard.py  xw_module.py  xw_patch.py
xw_auth_base/security/: ir.model.access.csv
xw_auth_base/static/description/: index.html
xw_auth_base/views/: reg_wizard.xml
xw_auth_demo/: __manifest__.py
xw_auth_demo/controllers/: controllers.py
xw_auth_demo/demo/: demo.xml
xw_auth_demo/models/: models.py
xw_auth_demo/security/: ir.model.access.csv
xw_auth_demo/views/: views.xml
xw_auth_server/: __manifest__.py
xw_auth_server/models/: __init__.py  auth_info.py
xw_auth_server/security/: ir.model.access.csv
xw_auth_server/static/description/: index.html
xw_auth_server/views/: auth_info.xml  menu_root.xml
xw_cbase/: .appveyor.yml  .cirrus.yml  CMakeLists.txt  README.md
xw_cbase/conda.recipe/: meta.yaml
xw_cbase/docs/: Makefile  cmake_example.rst  conf.py  index.rst  make.bat
xw_cbase/pybind11/: README.rst
xw_cbase/pybind11/docs/: basics.rst  compiling.rst
xw_cbase/src/: main.cpp
xw_cbase/tests/: test_basic.py
